<resources>
    <string name="app_name">Buecherwelt</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display2">Display 2</string>
    <string name="title_activity_ausgw_buch_activiy">AusgwBuchActiviy</string>
    <string name="title_activity_verwaltung">VerwaltungActivity</string>
    <string name="title_activity_kunden">KundenActivity</string>
    <string name="title_activity_neuer_kunde">NeuerKundeActivity</string>
    <string name="title_activity_kunden_ueberblick">KundenUeberblickActivity</string>
    <string name="title_activity_buch">BuchActivity</string>
    <string name="title_activity_neues_buch">NeuesBuchActivity</string>
    <string name="title_activity_kundeneinsicht">KundeneinsichtActivity</string>
    <string name="Bücherwelt">Bücherwelt</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="Benutzername">Benutzername</string>
    <string name="Passwort">Passwort</string>
    <string name="Benutzerdaten_ändern">Benutzerdaten ändern</string>
    <string name="Einsehen">Leihliste einsehen</string>
    <string name="Button_Login">Login</string>
    <string name="Willkommen">Willkommen!</string>
    <string name="back">Zurück</string>
    <string name="NewCustomer">Neuer Kunde</string>
    <string name="Customer">Kunden:</string>
    <string name="Employee">Mitarbeiter</string>
    <string name="Books">Bücher</string>
    <string name="title_activity_mitarbeiter_activity">Mitarbeiter_activity</string>
    <string name="title_activity_mitarbeiter_bearbeiten">Mitarbeiter_bearbeiten</string>
    <string name="speichern">Speichern</string>
    <string name="NewE">Neuer Mitarbeiter</string>
    <string name="FristName">Vorname</string>
    <string name="LastName">Nachname</string>
    <string name="Address">Straße+Hausnr.</string>
    <string name="Hnr">Hausnummer</string>
    <string name="PLZ">PLZ</string>
    <string name="Ort">Ort</string>
    <string name="C">Kunden</string>
    <string name="C_seit">Kunde seit:</string>
    <string name="Ausleihen">Ausgeliehene Bücher:</string>
    <string name="fällig">Fällig am:</string>
    <string name="C_edit">Kunde bearbeiten</string>
    <string name="Bplus">Buch hinzufügen</string>
    <string name="title_activity_m_mitarbeiter_liste">m_mitarbeiterListe</string>
    <string name="title_activity_mitarbeiter_login">MitarbeiterLogin</string>
    <string name="title_activity_daten__mitarbeiter">Daten_Mitarbeiter</string>
    <string name="title_activity_kundendaten">Kundendaten</string>
    <string name="KundenDatenÄndern">Meine Daten ändern:</string>
    <string name="title_activity_buecherwelt_liste">buecherweltListe</string>
    <string name="title_activity_buecher_liste">buecherListe</string>
    <string name="title_activity_ausleihkonto">Ausleihkonto</string>
    <string name="title_activity_buch_detail_sicht">BuchDetailSicht</string>
    <string name="DetailBuch">Buch Informationen:</string>
    <string name="BuchTitel">Titel</string>
    <string name="Autor">Autor</string>
    <string name="Erscheinungsjahr">Erscheinungsjahr</string>
<<<<<<< HEAD
=======
    <string name="title_activity_neue_ausleihung_hinzufuegen">NeueAusleihungHinzufuegen</string>

>>>>>>> c9e55f8e08c08635803f3baac2fe40c4414b3efa
</resources>
