<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.fh_muenster.buecherwelt.Mitarbeiter_activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bücherwelt"
        android:id="@+id/textView34"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/C"
        android:id="@+id/button18"
        android:layout_below="@+id/textView34"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:onClick="kunden" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Books"
        android:id="@+id/button19"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="bücher" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Employee"
        android:id="@+id/button20"
        android:layout_below="@+id/button19"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:id="@+id/button21"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="Logout" />
</RelativeLayout>
