<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.fh_muenster.buecherwelt.KundeneinsichtActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bücherwelt"
        android:id="@+id/textView30"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Benutzerdaten_ändern"
        android:id="@+id/button11"
        android:layout_below="@+id/textView30"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="81dp"
        android:onClick="kundeBearbeiten" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Einsehen"
        android:id="@+id/button12"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="leihlisteEinsehen" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Logout"
        android:id="@+id/button13"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="46dp"
        android:onClick="logout" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Willkommen"
        android:id="@+id/textView33"
        android:layout_below="@+id/textView30"
        android:layout_alignLeft="@+id/button13"
        android:layout_alignStart="@+id/button13"
        android:layout_marginTop="38dp" />
</RelativeLayout>
