<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.fh_muenster.buecherwelt.buecherweltAndroid.Kundendaten">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bücherwelt"
        android:id="@+id/textViewBücherweltKundendaten"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/KundenDatenÄndern"
        android:id="@+id/textViewKundenDatenÄndern"
        android:layout_below="@+id/textViewBücherweltKundendaten"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Speichern"
        android:id="@+id/buttonSpeichern"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/textView11"
        android:layout_alignEnd="@+id/textView11"
        android:onClick="speichern" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/FristName"
        android:ems="10"
        android:id="@+id/editTextFirstName"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/textViewBücherweltKundendaten"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/LastName"
        android:ems="10"
        android:id="@+id/editTextLastName"
        android:layout_marginTop="59dp"
        android:layout_below="@+id/editTextFirstName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/Address"
        android:ems="10"
        android:id="@+id/editTextAddress"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/PLZ"
        android:ems="10"
        android:id="@+id/editTextPLZ"
        android:layout_below="@+id/editTextAddress"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="39dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPostalAddress"
        android:hint="@string/Ort"
        android:ems="10"
        android:id="@+id/editTextOrt"
        android:layout_below="@+id/editTextPLZ"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="42dp" />

</RelativeLayout>
