<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="de.fh_muenster.buecherwelt.buecherweltAndroid.KundenUeberblickActivity"
    android:id="@+id/Kunde">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bücherwelt"
        android:id="@+id/textView18"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Name, Vorname:"
        android:id="@+id/textView19"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/textView18"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/Ausleihen"
        android:id="@+id/textView21"
        android:layout_below="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="113dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/fällig"
        android:id="@+id/textView22"
        android:layout_alignTop="@+id/textView21"
        android:layout_toRightOf="@+id/textView18"
        android:layout_toEndOf="@+id/textView18" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/C_edit"
        android:id="@+id/button7"
        android:layout_above="@+id/button8"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="53dp"
        android:onClick="KundeBearbeiten" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Bplus"
        android:id="@+id/button8"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/button7"
        android:layout_alignEnd="@+id/button7"
        android:onClick="BuchHinzufügen" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/textView21"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/button7"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView20"
        android:layout_marginTop="31dp"
        android:layout_below="@+id/textView19"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New Text"
        android:id="@+id/textView44"
        android:layout_alignTop="@+id/textView20"
        android:layout_toRightOf="@+id/textView18"
        android:layout_toEndOf="@+id/textView18" />

</RelativeLayout>
